--- a/client/package.json
+++ b/client/package.json
@@ -5,18 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "host": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "animate.css": "^4.1.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "navigate": "^0.3.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
