Added models, routes, and controllers for seller, buyer, and product

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,10 @@
-CONN_STRING="mongodb://localhost:27017/GearBox"
+CONN_STRING = "mongodb+srv://gijo:gijo123@cluster0.nfeagry.mongodb.net/GearBox?retryWrites=true&w=majority&appName=Cluster0"
+
 JWT_SECRET="dhebdyeu3eicnkj"
+
+CLOUD_NAME="dztx4i2re"
+CLOUD_API_KEY="976361529419679"
+
+
+EMAIL_USER="gijogeorgep02@gmail.com"
+EMAIL_PASSWORD="gj19092002"
