Added email verification using Nodemailer for seller and buyer signup

--- a/server/.env
+++ b/server/.env
@@ -7,4 +7,5 @@ CLOUD_API_KEY="976361529419679"
 
 
 EMAIL_USER="gijogeorgep02@gmail.com"
-EMAIL_PASSWORD="gj19092002"
+EMAIL_PASSWORD="nkzlzwdsmpfz ixrl
+"
