--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "animate.css": "^4.1.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.9",
     "navigate": "^0.3.6",
     "nodemailer": "^7.0.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
