--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.9",
+    "motion": "^12.12.1",
     "navigate": "^0.3.6",
     "nodemailer": "^7.0.2",
     "react": "^19.0.0",
@@ -23,8 +24,10 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.3",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^4.0.17",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
